<?xml version="1.0" encoding="utf-8"?>
<!-- This file is res/layout/main.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:keepScreenOn="true"
    >

    <!-- ImageView 
        android:background="@drawable/icon" 
        android:id="@+id/bannerImage"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" /-->
    <!-- TextView android:id="@+id/text"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="hello_world"/-->
    <LinearLayout
        style="@style/TitleBar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:id="@+id/title_center_layout"
        android:background="@color/text_hint_pink"
        >
        
    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="15dip"
        android:layout_margin="10px"
        android:layout_gravity="left|top"
        android:gravity="left|top"
        android:text="Sisse logimata kasutaja"
        android:textSize="@dimen/com_facebook_loginview_compound_drawable_padding"
        android:layout_weight="3" 
        />
    <Button
    android:id="@+id/shareButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:gravity="center"
    android:layout_marginTop="3dp"
    android:visibility="invisible"
    android:text="@string/jaga"
    android:layout_weight="1" 
    android:background="@drawable/button_red"
    />
       <com.facebook.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="wrap_content"
        android:layout_height="44dip"
        android:layout_gravity="right|top"
        android:gravity="right|top"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:textSize="@dimen/com_facebook_loginview_compound_drawable_padding"
        android:layout_weight="1"
        />
       </LinearLayout>        
       <!--android:layout_gravity="center_horizontal" 
        -->
 <include layout="@layout/titlebar" /> 
        
    <fragment class="ee.mehike.haanja100.fragments.SplitsFragment"
        android:id="@+id/splits_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
            android:background="#00FF00"
            android:drawSelectorOnTop="false"
            android:layout_weight="1"
      />
    
    
    <!-- TextView android:id="@id/android:empty"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="#FF0000"
               android:text="No data"
               /-->
    
	<LinearLayout
        	
        	style="@style/TitleBar"
	        android:layout_width="match_parent"
        	android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        >
 
        <Button
            android:id="@+id/bt_split"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_split"
            android:onClick="onSetAdd" 
            android:background="@drawable/button_red"
            />
 
        <Button
            android:id="@+id/bt_recalculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recalculate"
            android:onClick="onSetSort" 
            android:background="@drawable/button_blue"
            />
        <Button
            android:id="@+id/bt_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:background="@drawable/button_red"
            />
        
    </LinearLayout>

</LinearLayout>